# rover_21

./: .clang-format  .gitmodules  .pre-commit-config.yaml  README.md  test
d435_rtabmap/: CMakeLists.txt  package.xml
d435_rtabmap/launch/: all_cams.launch  rs_camera.launch  rs_d435_rtabmap.launch  rs_multiple_devices.launch
deneme/: CMakeLists.txt  package.xml
deneme/msg/: drone.msg  zaman.msg
deneme/scripts/: state_machine.py
doc/: USB-Rules  local-udev-rules
erc_science/: CMakeLists.txt  package.xml
erc_science/launch/: erc_science.launch
hero_arcade_drive_example2/: Hero Arcade Drive Example2.sln
hero_arcade_drive_example2/Hero Arcade Drive Example2/: Hero Arcade Drive Example2.csproj  Program.cs  pid.cs  pid_coef.cs
hero_drive_core/hero_drive_core/: DirectDrive.cs  Encoder.cs  IO.cs  InıtAndLoop.cs  ModeSwitch.cs  hero_drive_core.csproj
rover_20_control/msg/: Arm_msgs.msg
rover_20_control/scripts/: SerialMessageClass.py  SerialMessageClass.py.save  rover_msg_creator.py
rover_20_imu/config/: imu_bosch.yaml
rover_20_imu/launch/: imu.launch
rover_20_imu/nodes/: normalizer.py
rover_20_serial/config/: serial_config.yaml
rover_20_serial/launch/: rover_serial.launch
rover_20_serial/scripts/: arm_serial.py  emir_serial.py
rover_21_arm/: CMakeLists.txt  package.xml
rover_21_arm/arm_control/: CMakeLists.txt  package.xml
rover_21_arm/fabrik_algorithm/: definitions.h  fabrik_v2.cpp  fabrik_v4.cpp
rover_21_arm/robotic_arm_21/: CMakeLists.txt  package.xml
rover_21_arm/scripts/: 6dof_konum.cpp  6dof_konum.py  command_listener.cpp  command_listener.py  definitions.h  forward_kinematics.cpp  keyboard_joy_teleop.cpp
rover_21_control/: CMakeLists.txt  README.md  package.xml
rover_21_control/config/: teleop.yaml
rover_21_control/launch/: teleop_joy_f310.launch
rover_21_control/scripts/: autonomous_21.py  cmd_20.py  cmd_21.py  rover_odom.py  rover_sim_odom.py  roverodom.py  roverodom_han.py  teleop_joy_20.py
rover_21_cv/: CMakeLists.txt  package.xml
rover_21_cv/config/: camera.yaml  reach_image.yaml
rover_21_cv/include/ar_tracker/: ar_tracker.h  ar_tracker.hpp  params.h  slam_tree.h  tracker.h  tracker_one_time.h
rover_21_cv/launch/: alvar.launch  camera.launch  rtabmap.launch
rover_21_cv/scripts/: approaching_20.py  artag_search.py  artag_search1.py  bearing.py  camera_listener.py  erc_buton_switch_socket.py  rover_servo_serialm.py
rover_21_cv/scripts/detection_model/: indicator_red.xml  rot_main.xml  rot_switch.xml  rot_switch2.xml  socket.xml
rover_21_cv/src/: approaching_engine.cpp  artag_detection.cpp  aruco_slam.cpp  aruco_tracking.cpp  camera_node.cpp  feature_analizer.cpp
rover_21_cv_artag-master/: README.md
rover_21_description/: CMakeLists.txt  package.xml
rover_21_description/config/: control.yaml  joint_names_deneme12.yaml
rover_21_description/launch/: display.launch  gazebo.launch
rover_21_description/meshes/: base_link.STL  left_front_link.STL  left_rear_link.STL  right_front_link.STL  right_rear_link.STL
rover_21_description/urdf/: rover_21_description.csv  rover_21_description.urdf
rover_21_image/: CMakeLists.txt  package.xml
rover_21_imu/: CMakeLists.txt  LICENSE  README.md  package.xml
rover_21_imu/config/: imu_bosch.yaml
rover_21_imu/launch/: imu.launch
rover_21_imu/nodes/: bosch_imu_node.py
rover_21_localization/: README.md
rover_21_localization/launch/: localization.launch  localization_indoor.launch  localization_indoor_3d.launch  localization_run_sim.launch
rover_21_localization/params/: ekf_param_indoor.yaml  ekf_params.yaml  ekf_params_indoor_3d.yaml  navsat_params.yaml
rover_21_navigation/: CMakeLists.txt  package.xml
rover_21_navigation/config/: costmap_common.yaml  costmap_global_static.yaml  planner.yaml
rover_21_navigation/launch/: amcl_demo.launch  exploration.launch  gmapping.launch  gmapping_demo.launch  move_base.launch  move_base_mapless_demo.launch
rover_21_navigation/scrips/: ileri.py
rover_21_navsat_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rover_21_navsat_driver/launch/: nmea_crescent.launch  nmea_gps_rover.launch
rover_21_navsat_driver/scripts/: nmea_serial_driver  nmea_topic_driver  nmea_topic_serial_reader
rover_21_robotic_arm_sim/: README.md
rover_21_robotic_arm_sim/arm21_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rover_21_robotic_arm_sim/arm_21_gazebo/: CMakeLists.txt  package.xml
rover_21_robotic_arm_sim/arm_control_backup/: CMakeLists.txt  package.xml
rover_21_robotic_arm_sim/arm_op_control/: CMakeLists.txt  package.xml
rover_21_robotic_arm_sim/arm_op_control/include/: autonomous_functions.h  joy_functions.h  moveit_functions.h
rover_21_robotic_arm_sim/arm_op_control/scripts/: JointClass.py  SerialMessageClass.py  dummy_sensor.py  dummy_sensorV2.py  encoder_db.txt  encoder_reader.py  message_creator.py  rover_msg_creator.py  serial_funcs.py
rover_21_robotic_arm_sim/arm_op_control/src/: arm_control.cpp  autonomous_functions.cpp  joy_functions.cpp  moveit_functions.cpp
rover_21_robotic_arm_sim/arm_serial/: CMakeLists.txt  package.xml
rover_21_serial/: CMakeLists.txt  package.xml
rover_21_serial/config/: serial_config.yaml
rover_21_serial/launch/: rover_serial.launch  rover_serial_parameter.launch
src/: .CMakeLists.txt.swp
src/rover_20_control/: CMakeLists.txt  package.xml
src/rover_20_control/config/: autonomous.yaml  rover20_servocamera.yaml
src/rover_20_control/launch/: arm_joy_f310.launch  autonom_joy.launch  autonomous_20.launch  autonomous_drive.launch  drill_joy_f310.launch  indoor.launch  led_shovel_joy.launch  otonom_deneme.launch  outdoor.launch  teleop_joy_f310.launch
src/rover_20_control/scripts/: SerialMessageClass.py  rover_cmd_sub_main.py  rover_msg_creator.py
src/rover_21_navigation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/rover_21_navigation/config/: costmap_common.yaml
src/rover_21_navigation/launch/: move_base.launch
src/rover_21_navigation/scrips/: ileri.py  path_follower.py
src/rover_21_navigation/src/: path_following_node.cpp
(+128 files in other folders)
